Added jaws section to relief

--- a/sites/relief.html
+++ b/sites/relief.html
@@ -16,6 +16,8 @@
                 <div class = "btn-container">
                     <a href = "#video-container" id = "a_list" class = "btn btn-default exercise link category-link main-font">Wrists</a>								
                     <br/>
+					<a href = "#video-container" id = "h_list" class = "btn btn-default exercise link category-link main-font">Jaw</a>								
+                    <br/>
                     <a href = "#video-container" id = "b_list" class = "btn btn-default exercise link category-link main-font">Upper Back</a>
                     <br/>
                     <a href = "#video-container" id = "c_list" class = "btn btn-default exercise link category-link main-font">Lower Back</a>								
