Had bug in last commit, also reworked some stuff

--- a/about/instructors.html
+++ b/about/instructors.html
@@ -23,22 +23,42 @@
                     <h3 class = "main-font">Yoga</h3>
                     <ul class = "main-font">
                         <li>Ali Kamenova Yoga</li>
+                        <li>Annie Clarke</li>
+                        <li>Boho Beautiful Yoga</li>
+                        <li>BrettLarkinYoga</li>
+                        <li>Candace Cabrera</li>
+                        <li>Cat Meffan</li>
+                        <li>Chaz Rough</li>
                         <li>DoYogaWithMe</li>
                         <li>Fightmaster Yoga</li>
+                        <li>Five Parks Yoga w/ Erin Sampson</li>
+                        <li>Flow and Heal Yoga with Marinka</li>
                         <li>HASfit</li>
+                        <li>Jessica Richburg</li>
+                        <li>MadFit</li>
+                        <li>Mady Morrison</li>
+                        <li>Rituals Cosmetics Global</li>
+                        <li>Sarah Wes</li>
+                        <li>SarahBethYoga</li>
                         <li>Sean Vigue Fitness</li>
                         <li>The Yoga Ranger Studio with Aprille Walker</li>
                         <li>Yoga Dose</li>
                         <li>Yoga With Adriene</li>
                         <li>Yoga by Candace</li>
+                        <li>Yoga with Kassandra</li>
+                        <li>yoginimelbourne</li>
                     </ul>
                     
                     <h3 class = "main-font">Relief</h3>
                     <ul class = "main-font">
+                        <li>Chaz Rough</li>
                         <li>DoYogaWithMe</li>
+                        <li>Ekhart Yoga TV</li>
                         <li>Five Parks Yoga w/ Erin Sampson</li>
                         <li>Jessica Richburg</li>
                         <li>Mady Morrison</li>
+                        <li>MaliaYoga</li>
+                        <li>Renée Byrd</li>
                         <li>SaturnoMovement</li>
                         <li>Sean Vigue Fitness</li>
                         <li>The Yoga Ranger Studio with Aprille Walker</li>
@@ -49,6 +69,9 @@
                         <li>Yoga With Bird</li>
                         <li>Yoga by Candace</li>
                         <li>Yoga with Kassandra</li>
+                        <li>YogicAmnesiac</li>
+                        <li>flourishyoga</li>
+                        <li>yoginimelbourne</li>
                     </ul>
                     
                     <div class = "about-home-container">
