--- a/sites/yoga.html
+++ b/sites/yoga.html
@@ -56,6 +56,7 @@
             </div>
         </div>
 		<script src="static/js/Video.js"></script>
+        <script src="static/js/ListFactory.js"></script>
 		<script src="static/js/yoga_list.js"></script>
 		<script src="static/js/script.js"></script>
 	</body>
