--- a/sites/pilates.html
+++ b/sites/pilates.html
@@ -57,6 +57,7 @@
             </div>
         </div>
 		<script src="static/js/Video.js"></script>
+		<script src="static/js/ListFactory.js"></script>
 		<script src="static/js/pilates_list.js"></script>
 		<script src="static/js/script.js"></script>
 	</body>
