--- a/sites/relief.html
+++ b/sites/relief.html
@@ -57,6 +57,7 @@
             </div>
         </div>		
         <script src="static/js/Video.js"></script>
+        <script src="static/js/ListFactory.js"></script>
         <script src="static/js/relief_list.js"></script>
 		<script src="static/js/script.js"></script>
 	</body>
